sauvegarde des donnees des espace verst